syntax = "proto3";

option csharp_namespace = "ServiceContract";

package ServiceContract;


// Trade service definition.
service TradeService {
  rpc FetchTradesStream (TradeRequest) returns (stream TradeResult);
}

message TradeRequest{
    int32 id = 1;
    string counterparty = 2;
}

message TradeResult{
    int32 id = 1;
    string counterparty = 2;
    string currency =3;
    int32 notional = 4;
}
